# finance-ml

./: README.md
.github/workflows/: tests.yml
finance-ml/: pyproject.toml
finance-ml/tests/: test_linear_models.py
